--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="actions">
-<!--            <button id="download-btn">下载试卷</button>-->
+            <button id="download-btn">下载试卷</button>
             <button id="print-btn">打印试卷</button>
         </div>
     </div>
